--- a/swarm-playbook/docker/tasks/main.yml
+++ b/swarm-playbook/docker/tasks/main.yml
@@ -3,7 +3,13 @@
     yum: name=* state=latest
 
   - name : disable firewalld
-    service: name=firewalld state=stopped enabled=no
+    yum: name=firewalld state=absent
+
+  - name: install iptables
+    yum: name=iptables state=latest
+
+  - name : start iptables
+    service: name=iptables state=restarted enabled=yes
 
   - name: add docker repository
     template: src=docker.j2 dest=/etc/yum.repos.d/docker.repo
