--- a/swarm-playbook/site.yml
+++ b/swarm-playbook/site.yml
@@ -7,23 +7,26 @@
 - hosts: ca
   user: root
   roles:
-    - role: certs
-      cert_email: example@example.com
-      cert_org: Example Org
-      cert_ou: Example Unit
-
+    - certs
+  vars:
+    - cert_email: example@example.com
+    - cert_org: Example Org
+    - cert_ou: Example Unit
 
 - hosts: swarm_managers:swarm_nodes
   user: root
   roles:
     - docker
 
-- hosts: swarm_managers
+- hosts: swarm_discovery
   user: root
   roles:
     - swarm-discovery
 
-- hosts: swarm_nodes
+- hosts: swarm_managers:swarm_nodes
   user: root
   roles:
-    - swarm-nodes
+    - swarm-servers
+  vars:
+    - discovery_fqdn: consul://{{hostvars[groups['swarm_discovery'][0]]['ansible_fqdn']}}:8500
+    #- discovery_fqdn: zk://node1:port,node2:port/optionalpath
