--- a/addnodes-playbook/certs/tasks/main.yml
+++ b/addnodes-playbook/certs/tasks/main.yml
@@ -5,8 +5,8 @@
   - name: copy openssl configuration
     template: src=openssl.cnf.j2 dest=/tmp/certs/openssl-ca.cnf
 
-  - name: genereate CA private key
-    shell: openssl genrsa -out /tmp/certs/ca-priv-key.pem 2048
+  - name: copy existing CA private key
+    copy: src=client-certs/ca-priv-key.pem dest=/tmp/certs/ca-priv-key.pem
 
   - name: generate CA public key
     shell: openssl req -config /tmp/certs/openssl-ca.cnf -new -key /tmp/certs/ca-priv-key.pem -x509 -days 1825 -out /tmp/certs/ca.pem
