--- a/newswarm-playbook/site.yml
+++ b/newswarm-playbook/site.yml
@@ -20,6 +20,9 @@
   roles:
     - docker
     - swarm-discovery
+  vars:
+    - docker_conf: docker.devicemapper.conf.j2
+    #- docker_conf: docker.conf.j2
 
 - hosts: swarm_managers:swarm_nodes
   user: root
@@ -28,4 +31,6 @@
     - swarm-servers
   vars:
     - discovery_fqdn: consul://{{hostvars[groups['swarm_discovery'][0]]['ansible_fqdn']}}:8500
+    - docker_conf: docker.devicemapper.conf.j2
     #- discovery_fqdn: zk://node1:port,node2:port/optionalpath
+    #- docker_conf: docker.conf.j2
