--- a/newswarm-playbook/swarm-servers/tasks/main.yml
+++ b/newswarm-playbook/swarm-servers/tasks/main.yml
@@ -2,6 +2,7 @@
   - name: remove existing swarm manager(s) if present
     docker:
       name: swarm-manager
+      image: swarm
       state: absent
     when: "'swarm_managers' in group_names"
 
@@ -17,9 +18,10 @@
   - name: remove existing swarm node(s) if present
     docker:
       name: swarm-node
+      image: swarm
       state: absent
     when: "'swarm_nodes' in group_names"
-    
+
   - name: connect node(s) to swarm
     shell: >
       docker run -v /var/docker/certs:/var/docker/certs:ro --name swarm-node -d swarm join
