--- a/newswarm-playbook/site.yml
+++ b/newswarm-playbook/site.yml
@@ -21,7 +21,9 @@
     - docker
     - swarm-discovery
   vars:
+    - discovery_fqdn: consul://{{hostvars[groups['swarm_discovery'][0]]['ansible_fqdn']}}:8500
     - docker_conf: docker.devicemapper.conf.j2
+    #- discovery_fqdn: zk://node1:port,node2:port/optionalpath
     #- docker_conf: docker.conf.j2
 
 - hosts: swarm_managers:swarm_nodes
